--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -11,8 +11,8 @@
 ;多国家分组：支持港/日/美
 
 
-ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/canada77777site.list
-;ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
+;ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/canada77777site.list
+ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
 ;ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
@@ -49,8 +49,8 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 custom_proxy_group=AI`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=canada77777site`url-test`[]CA`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=US77777site`url-test`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=canada77777site`url-test`[]CA`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=US77777site`url-test`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http://www.gstatic.com/generate_204`600,,50
