--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -48,7 +48,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
-custom_proxy_group=AI`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=AI`fallback`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=canada77777site`url-test`[]CA`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=US77777site`url-test`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,50
@@ -57,10 +57,10 @@ custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http
 ;custom_proxy_group=KP NKR朝鲜`url-test`(朝鲜|north Korea|kp)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=IN India`url-test`(印度|India|INDIA|india)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=AU`url-test`(澳大利亚|Australia|AU|australia)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=CA`url-test`(加拿大|canada|CA|Canada)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=BR`url-test`(英国|British|UK|England)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=AU`fallback`(澳大利亚|Australia|AU|australia)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=CA`fallback`(加拿大|canada|CA|Canada)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=BR`fallback`(英国|British|UK|England)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=NZ`url-test`(新西兰|New Zealand|NZ|zealand)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TW`url-test`(台湾|Taiwan|TW|aiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=GM`url-test`(德国|German|Germany|german)`http://www.gstatic.com/generate_204`300,,50
