--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -50,7 +50,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 
-custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,50
+#custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=AI`fallback`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=canada77777site`url-test`[]CA`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=US77777site`url-test`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
