--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -15,6 +15,8 @@ ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/
 ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
 ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
+ruleset=ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -55,6 +57,8 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直
 
 custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=AI`fallback`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=ChatGPT`fallback`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Copilot`fallback`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=canada77777site`url-test`[]CA`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=US77777site`url-test`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,50
