--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -38,12 +38,12 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
-;ruleset=🎯 全球直连,[]GEOIP,CN
-;ruleset=🐟 漏网之鱼,[]FINAL
-
-ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
+
+;ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
+;ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+;ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]favorate`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`.*
