--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -45,7 +45,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ;ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]favorate`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择
+custom_proxy_group=🚀 节点选择`select`[]favorate`[]ENGLISH`[]🇺🇲 美国节点`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]AU`[]CA`[]BR`[]FR`[]GM`[]🚀 手动切换`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`[]favorate`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM
 custom_proxy_group=♻️ 自动选择`url-test`[]🇺🇲 美国节点`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 YouTube`select`[]ENGLISH`[]🇺🇲 美国节点`[]favorate`[]ASIA`[]🇭🇰 香港节点
