--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -127,17 +127,17 @@ custom_proxy_group=GM`url-test`(德国|German|Germany|german)`http://www.gstatic
 custom_proxy_group=FR`url-test`(法国|France|FR|france)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=INDO`url-test`(印度尼西亚|印尼|Indonesia)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=THAI`url-test`(泰国|Thailand)`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=SG`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=KOREA`url-test`(韩国|KOREA|korea)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=PHILIPPINES`url-test`(菲律宾|Philippines)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Pakistan`url-test`(巴基斯坦|Pakistan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Russia`url-test`(俄罗斯|Russia)`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=Turkey`url-test`(土耳其|Turkey)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Turkey`url-test`(土耳其|Turkey)`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=ENGLISH`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=ASIA`url-test`[]SG`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]TW`[]MO Macau`[]KOREA`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
+custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
 
 
 
