--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -113,7 +113,7 @@ custom_proxy_group=canada77777site`url-test`[]🇨🇦 加拿大节点`http://ww
 custom_proxy_group=US77777site`url-test`[]🇺🇸 美国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`600,,50
-;custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=MALAYSIA`url-test`(马来西亚|Malaysia|malaysia)`http://www.gstatic.com/generate_204`600,,50
 ;custom_proxy_group=IN India`url-test`(印度|India|INDIA|india)`http://www.gstatic.com/generate_204`600,,50
 ;custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
